samples/_failures_safe/1761503554_d2182d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b70eaf25.c: In function ‘main’:
./samples/SAFE/__tmp_b70eaf25.c:137:5: error: expected expression at end of input
  137 |     uint8_t *decompressed =
      |     ^~~~~~~
./samples/SAFE/__tmp_b70eaf25.c:137:5: error: expected declaration or statement at end of input
